# src/routes/patient.routes.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import { createPatientController } from "../modules/patients/useCases/create-patient";
+
+const patientRouter = Router()
+
+patientRouter.post('/patients', async (request, response) => {
+    await createPatientController.handle(request, response)
+})
+
+
+export { patientRouter }
